--- a/package.json
+++ b/package.json
@@ -8,18 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "chart.js": "^3.7.1",
-    "d3": "^7.3.0",
-    "date-fns": "^2.28.0",
-    "echarts": "^5.3.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "react-vega": "^7.4.4",
-    "react-vis": "^1.11.7",
-    "recharts": "^2.1.9"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
